# Sprint 3/API's locais/webapi.event+/bin/Release/net7.0/swagger.json
@@ -10,6 +10,33 @@
     "version": "v1"
   },
   "paths": {
+    "/api/ComentarioEvento/CadastroIA": {
+      "post": {
+        "tags": [
+          "ComentarioEvento"
+        ],
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/ComentariosEvento"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/ComentarioEvento": {
       "get": {
         "tags": [
@@ -66,6 +93,18 @@
         }
       }
     },
+    "/api/ComentarioEvento/listarSomenteExibe": {
+      "get": {
+        "tags": [
+          "ComentarioEvento"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/ComentarioEvento/BuscarPorId/{id}": {
       "get": {
         "tags": [
@@ -106,6 +145,48 @@
             "type": "string",
             "format": "uuid",
             "collectionFormat": "multi"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/ListarPeloIdEvento/{id}": {
+      "get": {
+        "tags": [
+          "ComentarioEvento"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/ListarSomenteExibePeloIdEvento/{id}": {
+      "get": {
+        "tags": [
+          "ComentarioEvento"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
           }
         ],
         "responses": {
